WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305138
Web Inspector: Break ref-cycle between WebInspectorUIProxy and WebInspectorBackendProxy
https://bugs.webkit.org/show_bug.cgi?id=305138
Summary
Web Inspector: Break ref-cycle between WebInspectorUIProxy and WebInspectorBa...
Qianlang Chen
Reported
2026-01-08 11:48:55 PST
Cycle created here:
https://github.com/WebKit/WebKit/pull/47706/files#diff-f50a5ef2ee8fb8865f2dcf08d2014746d5868192d2052a99d9e926afdd5acb96R76
Attachments
Add attachment
proposed patch, testcase, etc.
Qianlang Chen
Comment 1
2026-01-08 11:49:14 PST
rdar://167106238
Qianlang Chen
Comment 2
2026-01-08 12:04:47 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56275
EWS
Comment 3
2026-01-12 14:58:04 PST
Committed
305482@main
(5c7bdc5d1f25): <
https://commits.webkit.org/305482@main
> Reviewed commits have been landed. Closing PR #56275 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug